--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -26,23 +26,35 @@ a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.
             else if upload.fileType == 'image'
                 i.fa.fa-picture-o(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
 
-// 55 views   Zoran Zivcho Blagovcanin
-div.random-thing
+// shows view amount, username and if recent also time ago
+div.random-thing(style="margin-top:-4px;")
+    // view amount
     p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") #{upload.legitViewAmount} views &nbsp
         // upload time ago
 
+        // if its not sorted by popular (aka recent or other thing on user page)
         if !within
-            p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") &nbsp uploaded #{upload.timeAgo} &nbsp
+            p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;")
                 a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;") #{upload.uploader.channelName || upload.uploader.channelUrl}
+
+            p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") &nbsp uploaded #{upload.timeAgo} &nbsp
+
+            // if sorted by popular
         else
+            // username
             p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") &nbsp
                 a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;") #{upload.uploader.channelName || upload.uploader.channelUrl}
 
 
+// show views within time
 div.upload-thing
     if within
-        p.upload-title-text.views-text #{upload[popularTimeViews]} #{withinDisplayString}
+        p.upload-title-text.views-text(style="margin-top:-8px") #{upload[popularTimeViews]} #{withinDisplayString}
 
+
+
+
+// if user is an admin, allow them to see category and rating
 if user && user.role == 'admin'
     div.admin-div(style="margin-bottom:15px;margin-top:-4px;")
         if upload.category
