redo nodetube frontend

--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -8,8 +8,9 @@ block content
     br
     br
     br
-    h2 Welcome to NodeTube:
-    h2 The internet's best hosting for creators and developers
+    h1 Welcome to NodeTube
+    br
+    h2 The internet's simplest and funnest file hosting
     br
     br
     br
@@ -21,36 +22,36 @@ block content
       .col-sm-4
         h2 No Email Required &nbsp
           i.fa.fa-bolt
-        p Start using the platform and
-        | uploading content without an email
+        p Start your channel on NodeTube
+        | without having to verify your email
       .col-sm-4
         h2 Video, Audio, Images &nbsp
           i.fa.fa-thumbs-o-up
-        p Host all forms of media on
-        | our robust and innovative platform
+        p Over 30 file formats are supported
+        | between video, audio and image uploads
         br
         br
         br
       .col-sm-4
         h2 100% Open Source &nbsp
           i.fa.fa-space-shuttle
-        p Clone your own copy of NodeTube and
-        | have your instance up in minutes
+        p Create your own NodeTube instance
+        | in just minutes following our tutorials
 
 
     .row
       .col-sm-4
         h2 #{channelAmount} Channels &nbsp
           i.fa.fa-users
-        p The amount of people who have
-        | chosen this NodeTube for their hosting
+        p The number of creator who have
+        | chosen NodeTube for their media hosting
       .col-sm-4
         h2 #{mediaAmount} Uploads &nbsp
           i.fa.fa-upload
-        p The amount of  times users have
-        | chosen us for hosting their media
+        p The number of  times creators have
+        | chosen NodeTube for their content hosting
       .col-sm-4
         h2 #{viewAmount} Views &nbsp
           i.fa.fa-video
-        p The amount of times people have
+        p The number of times people have
         | enjoyed the innovative new platform
