--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -49,3 +49,5 @@ block content
                         h3.
                                 https://nodetube.live
 
+                        h3.
+                                Thank you!
