dont show donate button

--- a/views/media.pug
+++ b/views/media.pug
@@ -103,9 +103,9 @@ block content
                         li(role='presentation')
                             a.high-quality High
 
-            if upload.uploader.plan == 'plus' && ( upload.uploader.channelUrl == 'pewtube' || upload.uploader.channelUrl == 'anthony')
-                br
-                button.donate.btn.btn-success(style="margin-bottom:-10px") Donate
+            //if upload.uploader.plan == 'plus'
+            //    br
+            //    button.donate.btn.btn-success(style="margin-bottom:-10px") Donate
 
             div
                 // edit button
