--- a/public/css/nodetube.css
+++ b/public/css/nodetube.css
@@ -1,147 +1,149 @@
-.navbar-default .navbar-nav > li > a {
-    color: white;
-}
+/* use views/nodeTubeCss instead */
+
+/*.navbar-default .navbar-nav > li > a {*/
+    /*color: white;*/
+/*}*/
 
 
-.view-header {
-    display: inline;
-}
+/*.view-header {*/
+    /*display: inline;*/
+/*}*/
 
 
-/* 70 : 39 aspect ratio */
+/*!* 70 : 39 aspect ratio *!*/
 
-.border-preview {
-    border: 1px solid black;
-}
+/*.border-preview {*/
+    /*border: 1px solid black;*/
+/*}*/
 
-.upload-title {
-    height:89px;
-    overflow:hidden;
-    display: flex;
-    display: -webkit-flex;
-    width:80%;
-    margin:0 auto;
-}
+/*.upload-title {*/
+    /*height:89px;*/
+    /*overflow:hidden;*/
+    /*display: flex;*/
+    /*display: -webkit-flex;*/
+    /*width:80%;*/
+    /*margin:0 auto;*/
+/*}*/
 
-.title-anchor:hover {
-    text-decoration:none;
-    color: red;
-}
+/*.title-anchor:hover {*/
+    /*text-decoration:none;*/
+    /*color: red;*/
+/*}*/
 
-.title-anchor {
-    text-decoration:none;
-}
+/*.title-anchor {*/
+    /*text-decoration:none;*/
+/*}*/
 
-.upload-title-text {
-    color:black;
-    font-size:20px;
-    text-align: center;
-    margin: 0;
-    margin-top:8px;
-    height:53px;
-    overflow:hidden;
-
-    font-weight:300;
-}
-
-.upload-title-text:hover {
-    text-decoration: none
+/*.upload-title-text {*/
     /*color:black;*/
-}
+    /*font-size:20px;*/
+    /*text-align: center;*/
+    /*margin: 0;*/
+    /*margin-top:8px;*/
+    /*height:53px;*/
+    /*overflow:hidden;*/
 
-.upload-user-text{
-     color: black;
-     /*text-decoration:underline;*/
- }
-
-.upload-user-text:hover{
-    color: black;
-    /*text-decoration:underline;*/
-}
-
-.twenty-six {
-    font-size: 26px;
-}
-
-.upload-details {
-    width:90%;
-    margin:0 auto;
-    margin-top:-12px;
-}
-
-
-.views {
-    height:30px;
-    display: flex;
-    display: -webkit-flex;
-}
-
-.views-text {
-    font-size:14px;
-    text-align: center;
-    margin: auto;
-    color: rgba(0, 0, 0, 0.7);
-}
-
-.upload-file {
-    margin-right: 167px;
-    margin-bottom: 20px;
-    width:490px;
-}
-
-.change-size-button{
-    display: inline-block;
-    margin: 10px;
-}
-
-.unclicked-emoji img {
-    opacity: 0.5;
-}
-
-/*.centerDropdown {*/
-    /*left: auto !important;*/
-    /*right: -25% !important;*/
-/*}*/
-/*.centerDropdown:after {*/
-    /*left: auto !important;*/
-    /*right: 45% !important;*/
+    /*font-weight:300;*/
 /*}*/
 
-.dropdown-menu > li > a {
-    color: #333333;
-}
+/*.upload-title-text:hover {*/
+    /*text-decoration: none*/
+    /*!*color:black;*!*/
+/*}*/
 
-.vjs-slider{
-    height:15px;
-}
+/*.upload-user-text{*/
+     /*color: black;*/
+     /*!*text-decoration:underline;*!*/
+ /*}*/
+
+/*.upload-user-text:hover{*/
+    /*color: black;*/
+    /*!*text-decoration:underline;*!*/
+/*}*/
+
+/*.twenty-six {*/
+    /*font-size: 26px;*/
+/*}*/
+
+/*.upload-details {*/
+    /*width:90%;*/
+    /*margin:0 auto;*/
+    /*margin-top:-12px;*/
+/*}*/
 
 
-.plyr.plyr--video{
-    max-width: 80%;
-    margin: 0 auto;
-}
+/*.views {*/
+    /*height:30px;*/
+    /*display: flex;*/
+    /*display: -webkit-flex;*/
+/*}*/
 
-.plyr.plyr__video-wrapper{
-    background:white;
-}
+/*.views-text {*/
+    /*font-size:14px;*/
+    /*text-align: center;*/
+    /*margin: auto;*/
+    /*color: rgba(0, 0, 0, 0.7);*/
+/*}*/
 
-.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
-    max-height: 381px;
-}
+/*.upload-file {*/
+    /*margin-right: 167px;*/
+    /*margin-bottom: 20px;*/
+    /*width:490px;*/
+/*}*/
 
-.body {
-    background-color: #FAFAFA;
-}
+/*.change-size-button{*/
+    /*display: inline-block;*/
+    /*margin: 10px;*/
+/*}*/
 
-.preview-image {
-    width: inherit;
-    max-width:324px;
-    height:200px;
-    max-height:200px;
-}
+/*.unclicked-emoji img {*/
+    /*opacity: 0.5;*/
+/*}*/
 
-@media (max-width: 347px) {
-    .preview-image {
-        max-width:280px;
-    }
-}
+/*!*.centerDropdown {*!*/
+    /*!*left: auto !important;*!*/
+    /*!*right: -25% !important;*!*/
+/*!*}*!*/
+/*!*.centerDropdown:after {*!*/
+    /*!*left: auto !important;*!*/
+    /*!*right: 45% !important;*!*/
+/*!*}*!*/
+
+/*.dropdown-menu > li > a {*/
+    /*color: #333333;*/
+/*}*/
+
+/*.vjs-slider{*/
+    /*height:15px;*/
+/*}*/
+
+
+/*.plyr.plyr--video{*/
+    /*max-width: 80%;*/
+    /*margin: 0 auto;*/
+/*}*/
+
+/*.plyr.plyr__video-wrapper{*/
+    /*background:white;*/
+/*}*/
+
+/*.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {*/
+    /*max-height: 381px;*/
+/*}*/
+
+/*.body {*/
+    /*background-color: #FAFAFA;*/
+/*}*/
+
+/*.preview-image {*/
+    /*width: inherit;*/
+    /*max-width:324px;*/
+    /*height:200px;*/
+    /*max-height:200px;*/
+/*}*/
+
+/*@media (max-width: 347px) {*/
+    /*.preview-image {*/
+        /*max-width:280px;*/
+    /*}*/
+/*}*/
