--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no', name='viewport')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='theme-color' content='#4DA5F4')
     meta(name='csrf-token', content=_csrf)
@@ -51,7 +51,7 @@ html
     block extra_js
 
 
-  body(style="overflow-x:hidden")
+  body(style="overflow-x:hidden;touch-action: manipulation;")
     include nodeTubeCss
 
     //layout.pug
