bugfix image centering

--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -141,5 +141,7 @@ style.
     @media (max-width: 347px) {
         .preview-image {
             max-width: 280px;
+            margin-left: 50%;
+            transform: translateX(-50%);
         }
     }
