--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -33,12 +33,12 @@ style.
     }
 
     .upload-title-text {
+        max-height: 53px;
         color: black;
         font-size: 20px;
         text-align: center;
         margin: 0;
         margin-top: 8px;
-        height: 53px;
         overflow: hidden;
 
         font-weight: 300;
