--- a/views/media.pug
+++ b/views/media.pug
@@ -154,7 +154,7 @@ block content
                         h2 Upload Deleted
 
                     if upload.fileType == 'video' || upload.fileType == 'audio'
-                        p(style="margin-top:15px") File Size: #{ ( upload.fileSize/ ( 1000 * 1000)).toFixed() } MB
+                        p.fileSizeText(style="margin-top:15px") File Size: #{ ( upload.fileSize/ ( 1000 * 1000)).toFixed() } MB
 
                     if upload.category
                         each category in categories
