--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -91,6 +91,8 @@ style.
                 li
                   a.dropdown-anchors(href=`/admin/reacts`) Reacts
                 li
+                  a.dropdown-anchors(href=`/admin/subscriptions`) Subscriptions
+                li
                   a.dropdown-anchors(href=`/admin/createSocialPost`) Create Social Post
                 li
                   a.dropdown-anchors(href=`/admin/oneOffSocialPost`) One Off Social Post
