--- a/views/viewPartials/adminSensitivityButtons.pug
+++ b/views/viewPartials/adminSensitivityButtons.pug
@@ -40,7 +40,7 @@ if user && user.role == 'admin'
             if (data == 'success') {
               window.location.reload(true);
             } else {
-              swal("Something didn't work, please contact PewTube at ceo@pew.tube or via the widget in the bottom right corner")
+              swal("Something didn't work, please contact NodeTube at ceo@nodetube.org or via the widget in the bottom right corner")
             }
             console.log(data);
           },
@@ -80,7 +80,7 @@ if user && user.role == 'admin'
             if (data == 'success') {
               window.location.reload(true);
             } else {
-              swal("Something didn't work, please contact PewTube at ceo@pew.tube or via the widget in the bottom right corner")
+              swal("Something didn't work, please contact NodeTube at ceo@nodetube.org or via the widget in the bottom right corner")
             }
             console.log(data);
           },
