fix navbar functionality

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,4 +1,11 @@
+//@import "themes/gsdk/gsdk";
+
+//@import "themes/modern/variables";
+
 @import "themes/default/variables";
+
+//@import "themes/flatly/variables";
+
 
 @import "lib/bootstrap/bootstrap";
 @import "lib/font-awesome/font-awesome";
