--- a/public/css/themes/default/_variables.scss
+++ b/public/css/themes/default/_variables.scss
@@ -58,3 +58,7 @@ $navbar-default-link-hover-bg: transparent;
 $navbar-default-link-active-bg: transparent;
 $navbar-default-color: #fafafa;
 $navbar-default-brand-hover-color: #4da5f4;
+
+
+
+$navbar-default-bg: rgba(255, 255, 255, 0.9);
