fix navbar for admin

--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -160,3 +160,15 @@ style.
             margin-right: 0;
         }
     }
+
+    .dropdown-menu {
+        min-width: 100px;
+        max-width: 100px;
+    }
+
+    @media (min-width: 900px) {
+        .navbar-nav > li > a {
+            padding-left: 12px;
+            padding-right: 12px;
+        }
+    }
