--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -43,59 +43,57 @@ style.
           else
             a(href=`/media/subscribed`) Subscribed (0)
       ul.nav.navbar-nav.navbar-right
-        //if user
+        if user
 
-          //// support dropdown
-          //if user.role == 'support' || user.role == 'admin'
-          //  li.dropdown(class=(title == 'Admin Panel') ? 'active' : undefined)
-          //    a.dropdown-toggle(href='#', data-toggle='dropdown')
-          //      span= 'Support'
-          //      i.caret
-          //    ul.dropdown-menu(style="background-color:rgb(24,55,147)")
-          //      li(class=(title == 'Emails') ? 'active' : undefined)
-          //        a.dropdown-anchors(href=`/support/emails`) Emails
-          //
-          //// moderator dropdown
-          //if user.role == 'moderator' || user.role == 'admin'
-          //  li.dropdown(class=(title == 'Admin Panel') ? 'active' : undefined)
-          //    a.dropdown-toggle(href='#', data-toggle='dropdown')
-          //      span= 'Moderator'
-          //      i.caret
-          //    ul.dropdown-menu(style="background-color:rgb(24,55,147)")
-          //      li(class=(title == 'Reports') ? 'active' : undefined)
-          //        a.dropdown-anchors(href=`/support/reports`) Reports
-          //      li(class=(title == 'Recent Uploads') ? 'active' : undefined)
-          //        a.dropdown-anchors(href=`/media/recent`) Recent Uploads
-          //      li(class=(title == 'Pending') ? 'active' : undefined)
-          //        a.dropdown-anchors(href=`/pending`) Pending
-          //
-          //// admin dropdown
-          //if user.role == 'admin'
-          //  li.dropdown(class=(title == 'Admin Panel') ? 'active' : undefined)
-          //    a.dropdown-toggle(href='#', data-toggle='dropdown')
-          //      span= 'Admin Panel'
-          //      i.caret
-          //    ul.dropdown-menu(style="background-color:rgb(24,55,147)")
-          //      li
-          //        a.dropdown-anchors(href=`/admin/adminAudit`) Admin Audit
-          //      li(class=(title == 'Comments') ? 'active' : undefined)
-          //        a.dropdown-anchors(href=`/admin/comments`) Comments
-          //      li(class=(title == 'Uploads') ? 'active' : undefined)
-          //        a.dropdown-anchors(href=`/admin/uploads`) Uploads
-          //      li(class=(title == 'Users') ? 'active' : undefined)
-          //        a.dropdown-anchors(href=`/admin/users`) Users
-          //      li
-          //        a.dropdown-anchors(href=`/admin/siteVisitors`) Site Visitors
-          //      li
-          //        a.dropdown-anchors(href=`/admin/dailyStats`) Daily Stats
-          //      li
-          //        a.dropdown-anchors(href=`/admin/reacts`) Reacts
-          //      li
-          //        a.dropdown-anchors(href=`/admin/subscriptions`) Subscriptions
-          //      li
-          //        a.dropdown-anchors(href=`/admin/createSocialPost`) Create Social Post
-          //      li
-          //        a.dropdown-anchors(href=`/admin/oneOffSocialPost`) One Off Social Post
+          // support dropdown
+          if user.role == 'support' || user.role == 'admin'
+            li.dropdown(class=(title == 'Admin Panel') ? 'active' : undefined)
+              a.dropdown-toggle(href='#', data-toggle='dropdown')
+                span= 'Support'
+                i.caret
+              ul.dropdown-menu(style="background-color:rgb(24,55,147)")
+                li(class=(title == 'Emails') ? 'active' : undefined)
+                  a.dropdown-anchors(href=`/support/emails`) Emails
+
+          // moderator dropdown
+          if user.role == 'moderator' || user.role == 'admin'
+            li.dropdown(class=(title == 'Admin Panel') ? 'active' : undefined)
+              a.dropdown-toggle(href='#', data-toggle='dropdown')
+                span= 'Mod'
+                i.caret
+              ul.dropdown-menu(style="background-color:rgb(24,55,147)")
+                li(class=(title == 'Reports') ? 'active' : undefined)
+                  a.dropdown-anchors(href=`/support/reports`) Reports
+                li(class=(title == 'Pending') ? 'active' : undefined)
+                  a.dropdown-anchors(href=`/pending`) Pending
+
+          // admin dropdown
+          if user.role == 'admin'
+            li.dropdown(class=(title == 'Admin') ? 'active' : undefined)
+              a.dropdown-toggle(href='#', data-toggle='dropdown')
+                span= 'Admin'
+                i.caret
+              ul.dropdown-menu(style="background-color:rgb(24,55,147);max-width: 159px;margin-right: -47px;")
+                li
+                  a.dropdown-anchors(href=`/admin/adminAudit`) Admin Audit
+                li(class=(title == 'Comments') ? 'active' : undefined)
+                  a.dropdown-anchors(href=`/admin/comments`) Comments
+                li(class=(title == 'Uploads') ? 'active' : undefined)
+                  a.dropdown-anchors(href=`/admin/uploads`) Uploads
+                li(class=(title == 'Users') ? 'active' : undefined)
+                  a.dropdown-anchors(href=`/admin/users`) Users
+                li
+                  a.dropdown-anchors(href=`/admin/siteVisitors`) Site Visitors
+                li
+                  a.dropdown-anchors(href=`/admin/dailyStats`) Daily Stats
+                li
+                  a.dropdown-anchors(href=`/admin/reacts`) Reacts
+                li
+                  a.dropdown-anchors(href=`/admin/subscriptions`) Subscriptions
+                li
+                  a.dropdown-anchors(href=`/admin/createSocialPost`) Create Social Post
+                li
+                  a.dropdown-anchors(href=`/admin/oneOffSocialPost`) One Off Social Post
 
         //li(class=(title == 'Features') ? 'active' : undefined)
         //  a(href=`/features`) Features
@@ -124,7 +122,7 @@ style.
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               span #{user.channelName || user.channelUrl } (#{unreadNotifAmount}) &nbsp
               i.caret
-            ul.dropdown-menu(style="background-color:rgb(24,55,147)")
+            ul.dropdown-menu(style="background-color:rgb(24,55,147);max-width: 147px;")
               li
                 a.dropdown-anchors(href=`/notifications` style="color:white;") Notifications (#{unreadNotifAmount})
               li
