--- a/views/upload.pug
+++ b/views/upload.pug
@@ -42,14 +42,19 @@ block content
           | File Upload
 
         br
-        h3 NodeTube supports video, audio and image files
+        h3 NodeTube supports video, audio and image uploads
 
         br
         br
-        p Supported file formats:
-        p Videos : ['.mp4', '.avi', '.flv', '.MOV', '.m4v', '.ogv', '.webm', '.wmv', '.mkv', '.mov', '.m2t', '.MTS', '.m2ts', '.MPG', '.AVI', '.mpg']
-        p Audio: ['.mp3', '.wav', '.ogg', '.m4a'];
-        p Images: ['.png', '.jpg', '.jpeg', '.gif', '.JPG', '.PNG'];
+        div(style="max-width:500px;margin:0 auto;")
+          p(style="font-size:15px;margin-bottom:16px;") Supported File Formats
+          p Video
+          p(style="line-height:23px;max-width:310px;margin:0 auto;margin-bottom:19px;") .mp4, .avi, .flv, .MOV, .m4v, .ogv, .webm, .wmv, .mkv, .mov, .m2t, .MTS, .m2ts, .MPG, .AVI, .mpg
+          p Audio
+          p(style="max-width:209px;margin:0 auto;margin-bottom:19px;") .mp3, .wav, .ogg, .m4a
+          p Image
+          p(style="max-width:209px;margin:0 auto;margin-bottom:19px;") .png, .jpg, .jpeg, .gif, .JPG, .PNG
+
 
         br
 
@@ -88,7 +93,7 @@ block content
                   br
 
                   label(for='title') Title (*)
-                  input.form-group.center-block.text-center(style="width:400px;max-width:95%" type="text" name="title" id="title" minlength=3, maxlength=100 required)
+                  input.form-group.center-block.text-center(style="width:400px;max-width:95%;border-radius:2px;" type="text" name="title" id="title" minlength=3, maxlength=100 required)
                   br
 
                   // add endpoint for visibility
@@ -107,6 +112,9 @@ block content
                         | Private
                     br
 
+                  label(for='title') Select A Category
+                  br
+
                   div.dropdown(style="display:inline;padding-right:15px;")
                     button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
                       | Category: &nbsp
@@ -116,13 +124,17 @@ block content
                       each category in categories
                         li(role='presentation')
                           a.categoryValue(style="cursor:pointer;" data-value=category.name data-displayname=category.displayName) #{category.displayName}
-                    br
 
-                    br
-
+                  br
+                  br
                   div.categoryName(style="display:none")
-                    h5.categoryDisplayName Category: $Thing
+                    h5(style="font-size:20px;").categoryDisplayName Category: $Thing
                     br
+
+
+
+                  br
+                  br
 
                   // subcategories
                   each category in categories
@@ -167,7 +179,7 @@ block content
                   br
                   label(for="description") Description
                   br
-                  textarea.form-group(style="width:400px;max-width:95%" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
+                  textarea.form-group(style="width:400px;max-width:95%;border-radius:4px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
 
                   //br
                   //label.control-label(for='filetoupload' style="") Channel Thumbnail
