--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -148,6 +148,7 @@ style.
         max-width: 324px;
         height: 200px;
         max-height: 200px;
+        border-radius: 7px;
     }
 
     @media (max-width: 347px) {
@@ -173,10 +174,10 @@ style.
         }
     }
 
-    .dropdown-menu {
-        min-width: 100px;
-        max-width: 100px;
-    }
+    /*.dropdown-menu {*/
+        /*min-width: 100px;*/
+        /*max-width: 100px;*/
+    /*}*/
 
     @media (min-width: 900px) {
         .navbar-nav > li > a {
