--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -45,7 +45,7 @@ block content
 
 
                 each upload in uploads
-                    div.col-sm-4(style="text-align:center;height:335px;")
+                    div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:335px;")
 
                         include ../viewPartials/uploadThumbnail
 
