--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -54,30 +54,30 @@ div.upload-thing
 
 
 
-// if user is an admin, allow them to see category and rating
-if user && user.role == 'admin'
-    div.admin-div(style="margin-bottom:15px;margin-top:-4px;")
-        if upload.category
-            p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;display:inline;") #{upload.category}
-        if upload.subcategory
-            p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;display:inline;") #{upload.subcategory}
-        if upload.rating
-            if upload.rating == 'allAges'
-                p.upload-title-text.views-text(style="display:inline") SFW
-            if upload.rating == 'mature'
-                p.upload-title-text.views-text(style="display:inline") NSFW
-            if upload.rating == 'sensitive'
-                p.upload-title-text.views-text(style="display:inline") Sensitive (18+)
-
-        div.thing(style="margin-top:-33px;margin-left:44px;display:block")
-             input.ratingChanged(style="display:block" type="checkbox" value=`${upload._id}`)
-
-// denote whether upload is deleted
-if user && (user.role == 'admin' || user.role == 'moderator') && upload.visibility == 'removed'
-    div
-        h4(style="margin-top:-5px;margin-bottom:-18px;") DELETED
-        //p(style="font-size:15px") #{upload.uploader.channelName || upload.uploader.channelUrl}
-        //    if upload.uploader.verified == true
-        //        img(src="/images/verified.jpg" width="19px" height="19px" style="margin-left:3px;margin-top:-2px;")
-        //    if upload.uploader.plan == 'plus'
-        //        span.pewtube-pro PLUS
+//// if user is an admin, allow them to see category and rating
+//if user && user.role == 'admin'
+//    div.admin-div(style="margin-bottom:15px;margin-top:-4px;")
+//        if upload.category
+//            p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;display:inline;") #{upload.category}
+//        if upload.subcategory
+//            p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;display:inline;") #{upload.subcategory}
+//        if upload.rating
+//            if upload.rating == 'allAges'
+//                p.upload-title-text.views-text(style="display:inline") SFW
+//            if upload.rating == 'mature'
+//                p.upload-title-text.views-text(style="display:inline") NSFW
+//            if upload.rating == 'sensitive'
+//                p.upload-title-text.views-text(style="display:inline") Sensitive (18+)
+//
+//        div.thing(style="margin-top:-33px;margin-left:44px;display:block")
+//             input.ratingChanged(style="display:block" type="checkbox" value=`${upload._id}`)
+//
+//// denote whether upload is deleted
+//if user && (user.role == 'admin' || user.role == 'moderator') && upload.visibility == 'removed'
+//    div
+//        h4(style="margin-top:-5px;margin-bottom:-18px;") DELETED
+//        //p(style="font-size:15px") #{upload.uploader.channelName || upload.uploader.channelUrl}
+//        //    if upload.uploader.verified == true
+//        //        img(src="/images/verified.jpg" width="19px" height="19px" style="margin-left:3px;margin-top:-2px;")
+//        //    if upload.uploader.plan == 'plus'
+//        //        span.pewtube-pro PLUS
