--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -179,9 +179,19 @@ style.
         /*max-width: 100px;*/
     /*}*/
 
+
+
     @media (min-width: 900px) {
         .navbar-nav > li > a {
             padding-left: 12px;
             padding-right: 12px;
+        }
+    }
+
+    @media (max-width: 942px) {
+        .categoryDisplayName {
+            text-align: center;
+            margin-bottom: 30px;
+
         }
     }
